--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
             android:layout_height="match_parent"
             android:layout_margin="3dp"
             android:layout_weight="1"
+            android:onClick="goToNotifScreen"
             app:icon="@drawable/ic_notifications_black_24dp" />
 
         <Button
