--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,11 +14,17 @@
 
     <item
         android:id="@+id/navigation_notifications"
+        android:checkable="false"
+        android:enabled="false"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
     <item
         android:id="@+id/navigation_Test"
         android:icon="@android:drawable/btn_star"
-        android:title="Test" />
+        android:title="Test"
+        android:visible="true" />
+    <item
+        android:icon="@drawable/locationsnearme"
+        android:title="LocationsNearMe" />
 
 </menu>
