--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/locationsnear_btn"
+        android:layout_width="72dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="600dp"
+        android:layout_marginEnd="10dp"
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+        android:text="NearbyLocations"
+        android:visibility="visible"
+        app:icon="@drawable/locnear"
+        app:iconPadding="8dp"
+        app:iconSize="40dp"
+        app:iconTint="@color/white"
+        app:iconTintMode="multiply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <org.osmdroid.views.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
