--- a/app/src/main/res/layout/activity_sos.xml
+++ b/app/src/main/res/layout/activity_sos.xml
@@ -5,6 +5,54 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SOS">
+    tools:context=".InfoAndSafetyInstructionsScreen">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:gravity="top"
+        android:background="#FFFFFF">
+
+
+        <TextView
+            android:id="@+id/dangerTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="We have been notified that you are in danger"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="6dp"
+            android:background="#FF1B05"
+            android:gravity="center"
+            android:paddingBottom="40dp" />
+
+
+        <TextView
+            android:id="@+id/contactMessageTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp" />
+
+
+        <TextView
+            android:id="@+id/callMessageTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:paddingTop="16dp" />
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
