--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -8,13 +8,21 @@
     android:elevation="4dp"
     android:layout_marginBottom="8dp">
 
+    <ImageView
+        android:id="@+id/location_type_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="Location Type Icon"
+        android:src="@drawable/ic_refuge"  />
+
     <TextView
         android:id="@+id/location_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Location Name"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/location_distance"
