--- a/app/src/main/res/layout/ask_loc_info_popup_window.xml
+++ b/app/src/main/res/layout/ask_loc_info_popup_window.xml
@@ -24,6 +24,14 @@
         android:layout_marginBottom="8dp"/>
 
     <EditText
+        android:id="@+id/location_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Location Type"
+        android:inputType="textCapWords"
+        android:layout_marginBottom="8dp"/>
+
+    <EditText
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
